// Copyright 2019 The ChromiumOS Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";
option optimize_for = LITE_RUNTIME;

package u2f;

// Contains the user secret used in key derivation.
message UserSecret {
  bytes secret = 1;
}

// Represents the U2F device counter.
message U2fCounter {
  int64 counter = 1;
}

// Wrapper message for a proto, and a hash to verify integrity.
message UserDataContainer {
  // Contains an encoded proto.
  bytes data = 1;
  // Hash of the encoded proto.
  bytes sha256 = 2;
}